force-app/main/default/objects/Solar_Energy__c/Solar_Energy__c.object-meta.xml
<CustomObject>
    <label>Solar Energy</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Solar Energy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solar Energies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>