force-app/main/default/objects/Solar_Energy__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <label>Current (A)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>