force-app/main/default/objects/Solar_Energy__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <label>Date Time</label>
    <length>26</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>