force-app/main/default/objects/Solar_Energy__c/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <formula>(Voltage__c *  Current__c) / 60.0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power (W)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>