force-app/main/default/objects/Solar_Energy__c/fields/Solar_Day__c.field-meta.xml
<CustomField>
    <fullName>Solar_Day__c</fullName>
    <label>Solar Day</label>
    <referenceTo>Solar_Day__c</referenceTo>
    <relationshipLabel>Solar Energies</relationshipLabel>
    <relationshipName>Solar_Energies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>