force-app/main/default/objects/Solar_Energy__c/fields/Voltage__c.field-meta.xml
<CustomField>
    <fullName>Voltage__c</fullName>
    <label>Voltage (V)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>