force-app/main/default/objects/Solar_Energy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>